# statement-normalizer

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: amex_creditcard.csv  bofa_checking.csv  capital_one_creditcard.csv  chase_checking.csv  demo.py  discover_creditcard.csv  sample.mt940  sample.qif  wells_fargo_checking.csv
statement_normalizer/: __init__.py  cli.py  dedup.py  normalize.py  schema.py  util.py
statement_normalizer/parsers/: __init__.py  camt052_parser.py  camt053_parser.py  csv_parser.py  mt940_parser.py  ofx_parser.py  qif_parser.py  text_parser.py
tests/: conftest.py  test_camt052_parser.py  test_camt053_parser.py  test_cli_features.py  test_csv_aliases.py  test_csv_parser.py  test_dedup.py  test_mt940_parser.py  test_normalize_and_cli.py  test_ofx_parser.py  test_qif_parser.py  test_text_parser.py  test_util.py
tests/fixtures/: bank_debit_credit.csv  bank_signed_amount.csv  creditcard.csv  overlap_feb.csv  overlap_jan.csv  sample.camt052.xml  sample.camt053.xml  sample.mt940  sample.ofx  sample.qif  sample_overlap.ofx  statement.txt
