[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "statement-normalizer"
version = "0.1.0"
description = "Deterministic, rule-based normalizer for bank & credit-card statements (CSV, OFX/QFX, text) into clean transaction JSON. No ML."
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
keywords = ["bank", "statement", "ofx", "qfx", "csv", "transactions", "normalize", "fintech", "accounting"]
authors = [{ name = "statement-normalizer contributors" }]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Topic :: Office/Business :: Financial :: Accounting",
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.scripts]
statement-normalizer = "statement_normalizer.cli:main"

[project.urls]
Homepage = "https://github.com/maxed-oss/statement-normalizer"
Repository = "https://github.com/maxed-oss/statement-normalizer"
Issues = "https://github.com/maxed-oss/statement-normalizer/issues"

[tool.setuptools.packages.find]
include = ["statement_normalizer*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
